2007-10-11  Paf <paf@tuxfamily.org>
	* include/persistentobject.h: Add method getAttributesNames(); Make
	const_iterator on attributes possible                  
	* src/persistentobject.cpp: Add method getAttributesNames(); Make
	const_iterator on attributes possible                  

2007-10-06  Paf <paf@tuxfamily.org>
	* src/main.cpp: Fix case issue in includes
	* src/core/include/cameraFixe.h: Renamed to src/core/include/camerafixe.h
	* src/core/include/cameraFreeFly.h: Renamed to src/core/include/camerafreefly.h
	* src/core/src/cameraFreeFly.cpp: Renamed to src/core/src/camerafreefly.cpp
	* src/graphic/src/cgraphicmodule.cpp: Fix case issue in includes
	* Makefile.am: Fix case issue in includes

2007-10-06  Gabriel <countag@wanadoo.fr>
	* src/core/include/camerafreefly.h: Add hack to enable key repeat
	* src/core/include/camerafreefly.h: Add management of mouse for the rotation
	* src/core/include/ctimermodule.cpp: Fix error on windows because of missing header "OgrePlatform.h"
	* src/core/include/ctimermodule.h: Fix conflict between map and multimap that generated an error on VS2005 
	* src/core/include/cgraphicmodule.h: Fix namespace (Viracocha to Gnoll) for the camera

2007-10-03  Paf <paf@tuxfamily.org>
	* src/core/tests/testpo.cpp: Updated regarding operators changes in class
	Scalar<T>
	*  src/core/include/string.h: Add some operators and put class definition in string.cpp
	* src/core/include/scalar.h: Add conversion, arithmetic, insertion and
	extraction operators. getValue() method is now const. Add attribute type getter and setter
	* src/core/src/string.cpp: File added
	* src/core/Makefile: Add src/core/src/string.cpp to testpo target
	* Makefile.am: Add src/core/src/string.cpp to list of source files

2007-10-01  Gabriel <countag@wanadoo.fr>
	* src/core/include/camera.h: Initial release
	* src/core/include/camerafreefly.h: Initial release
	* src/core/include/camerafixe.h: Initial release